# MODULAR-RAG-MCP-SERVER-clean-start

MODULAR-RAG-MCP-SERVER-clean-start/: .gitignore  DEV_SPEC.md  README.md  main.py  pyproject.toml
MODULAR-RAG-MCP-SERVER-clean-start/config/: settings.yaml
MODULAR-RAG-MCP-SERVER-clean-start/config/prompts/: chunk_refinement.txt  image_captioning.txt  rerank.txt
MODULAR-RAG-MCP-SERVER-clean-start/scripts/ollama/: README.md  start_ollama.bat  start_ollama.ps1  start_ollama.py  start_ollama.sh
MODULAR-RAG-MCP-SERVER-clean-start/src/core/: __init__.py  settings.py  types.py
MODULAR-RAG-MCP-SERVER-clean-start/src/ingestion/: pipeline.py
MODULAR-RAG-MCP-SERVER-clean-start/src/observability/: logger.py
MODULAR-RAG-MCP-SERVER-clean-start/tests/fixtures/: noisy_chunks.json
MODULAR-RAG-MCP-SERVER-clean-start/tests/integration/: test_chroma_store_roundtrip.py  test_chunk_refiner_llm.py  test_ingestion_pipeline.py
MODULAR-RAG-MCP-SERVER-clean-start/tests/unit/: test_azure_vision_llm.py  test_batch_processor.py  test_bm25_indexer_roundtrip.py  test_chunk_refiner.py  test_config_loading.py  test_core_types.py  test_cross_encoder_reranker.py  test_custom_evaluator.py  test_dense_encoder.py  test_document_chunker.py  test_embedding_factory.py  test_embedding_providers_smoke.py  test_file_integrity.py  test_image_captioner_fallback.py  test_image_storage.py  test_llm_factory.py  test_llm_providers_smoke.py  test_llm_reranker.py  test_loader_pdf_contract.py  test_metadata_enricher_contract.py  test_ollama_embedding.py  test_ollama_llm.py  test_recursive_splitter_lib.py  (+7 more)
(+51 files in other folders)
